# paperwave

./: Cargo.toml  Justfile  README.md
src/: lib.rs  main.rs  uc8159.rs  web.rs
src/displays/: common.rs  detect.rs  el133uf1.rs  error.rs  mod.rs  uc8159.rs
src/web/: handlers.rs  mod.rs  state.rs  templates.rs  util.rs
templates/: index.html
