[package]
name = "paperwave"
description = "CLI tool to display images on Inky displays"
version = "0.2.0"
edition = "2024"
license-file = "LICENSE"
repository = "https://github.com/ikornaselur/paperwave"

[dependencies]
clap = { version = "4.5.50", features = ["derive"] }
image = { version = "0.25.5", default-features = false, features = ["png", "jpeg"] }
thiserror = "2.0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(target_os = "linux")'.dependencies]
gpio-cdev = "0.6.0"
spidev = "0.7.0"
i2cdev = "0.6.1"
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1.40", features = ["macros","rt-multi-thread","signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5", features = ["trace"] }
