[package]
name = "paperwave"
description = "CLI tool to display images on Inky displays"
version = "0.3.0"
edition = "2024"
license-file = "LICENSE"
repository = "https://github.com/ikornaselur/paperwave"

[dependencies]
clap = { version = "4.5.50", features = ["derive"] }
image = { version = "0.25.5", default-features = false, features = ["png"] }
thiserror = "2.0.17"

[target.'cfg(target_os = "linux")'.dependencies]
gpio-cdev = "0.6.0"
spidev = "0.7.0"
i2cdev = "0.6.1"
